--- a/readme
+++ b/readme
@@ -1,7 +1,7 @@
 LINGUAGEM UTILIZADA: Python
 IDE: Pycharm (em ambos os hardwares)
 HARDWARE: Desenvolido simultaneamente em 2 computadores, com a sincronização entre hardwares feita através de repositório no github
-(Utilizei a maior parte do tempo o hardware 2 estado grande parte do software desenhado para este)
+(Utilizei a maior parte do tempo o hardware 2 estando grande parte do software desenhado para este)
 HARDWARE 1: Computador windows com: -Ryzen 3600x com 6 cores e 12 threads a uma base clock de 3.8GHz
                                     -RTX 2060 com 6GB GDDR6
                                     -16GB de RAM DDR4 a 3200mhz
